[gd_scene load_steps=3 format=3 uid="uid://dsp211s347rr4"]

[ext_resource type="Script" path="res://Scripts/UI/lobby.gd" id="1_f8jqi"]
[ext_resource type="Texture2D" uid="uid://bljnhrg8al7p5" path="res://Assets/Screenshot_2.png" id="2_qf6fo"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8jqi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1331.0
offset_bottom = 853.0
texture = ExtResource("2_qf6fo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -46.5
offset_right = 60.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Lobby"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="UsernameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
text = "Username"

[node name="ColorRect" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
visible = false
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
visible = false
custom_minimum_size = Vector2(23, 0)
layout_mode = 2

[node name="StartGameButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
